# seed_r7_ros_pkg

./: .gitignore  .travis.yml  README.md
ms_stub/: CMakeLists.txt  package.xml
ms_stub/cmake/: dirlist.cmake
ms_stub/launch/: bringup.launch
ms_stub/src/: create_data.cpp  create_data.hpp  main.cpp  ms_stub.cpp  ms_stub.hpp  serial.cpp  serial.hpp  tools.cpp  tools.hpp
noid_bringup/: CMakeLists.txt  package.xml
noid_bringup/config/: extra_controller_settings.yaml  hand_cfg.yaml  ps3.config.yaml  robot_config.yaml
noid_bringup/launch/: moveit.launch  noid_bringup.launch
noid_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
noid_description/typeF/: aero.urdf  aero.urdf.xacro  joint_settings.yaml  noid-upper.urdf.xacro  noid.urdf  noid.urdf.xacro
noid_description/urdf/: gazebo.xacro
noid_mover_navigation/: CMakeLists.txt  package.xml
noid_mover_navigation/config/: DWAPlanner.yaml
noid_mover_navigation/launch/: amcl.launch  making_map_navigation.launch  map_saver.launch  move_base.launch  static_map_navigation.launch  wheel_bringup.launch  wheel_with_dummy.launch  wheel_with_making_map.launch  wheel_with_static_map.launch
noid_mover_navigation/maps/: dummy.pgm  dummy.yaml
noid_robot_interface/: CMakeLists.txt  package.xml
noid_robot_interface/include/: AJointIndex.hh  AngleJointNames.hh  CommonAngle2Stroke.hh  RobotController.h  RobotController.hh  RobotStrokeConverter.h  RobotStrokeConverter.hh  UnusedAngle2Stroke.h  noid_lower_controller.h  noid_upper_controller.h  robot_stroke_converter.h~HEAD  stroke_mask.h  stroke_to_angle.h  typef_Angle2Stroke.hh  typef_Stroke2Angle.hh
noid_robot_interface/src/: Angle2Stroke.cc  Angle2Stroke.cpp  AngleJointNames.cc  RobotController.cpp  RobotStrokeConverter.cpp  Stroke2Angle.cc  Stroke2Angle.cpp  angle_to_stroke.cpp  noid_lower_controller.cpp  noid_upper_controller.cpp  robot_stroke_converter.cpp  robot_stroke_converter.cpp~HEAD  stroke_to_angle.cpp  typef_Angle2Stroke.cc  typef_Stroke2Angle.cc
noid_ros_controller/: CMakeLists.txt  package.xml
noid_ros_controller/include/: NoidGrasp.h  NoidGrasp.hh  NoidHandController.h  NoidHandController.hh  NoidMoveBaseRH.hh  mover_robot_hardware.h  mover_robot_hardware.hh  noid_grasp.h  noid_hand_controller.h  noid_mover_controller.h  noid_robot_hardware.h  noid_robot_hardware.hh  seed-mover_hardware.h
noid_ros_controller/src/: NoidHandController.cc  NoidHandController.cpp  mover_robot_hardware.cc  noid_hand_controller.cpp  noid_mover_controller.cpp  noid_robot_hardware.cpp  noid_ros_controller.cpp  seed-mover_hardware.cpp
noid_ros_controller/srv/: GraspControl.srv  HandControl.srv
noid_typeF_moveit_config/: CMakeLists.txt  package.xml
noid_typeF_moveit_config/config/: fake_controllers.yaml  kinematics.yaml
noid_typeF_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
noid_typef_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
noid_typef_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
noid_typef_description/robots/: aero-upper.urdf.xacro  aero-wheels.urdf.xacro  aero.urdf  aero.urdf.xacro
noid_typef_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
noid_typef_moveit_config/config/: AeroTypeFCET.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  typeF.srdf
noid_typef_moveit_config/launch/: AeroUpperRobot_moveit_controller_manager.launch.xml  SEED-Noid-Mover-typeF_moveit_controller_manager.launch.xml  aero_descriptions_for_moveit.launch  chomp_planning_pipeline.launch.xml  controller_manager.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  joint_trajectory_action_server.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real_robot.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
noid_typef_moveit_config/scripts/: joint_state_publisher_with_lifter.py  joint_trajectory_action_server.py  lifter_controller.py
robots/common/: CMakeLists.txt  package.xml
robots/typeg/: CMakeLists.txt  package.xml
seed_r7_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz.rviz
seed_r7_bringup/config/: elecom-holonomic.config.yaml  extra_controller_settings.yaml  ps3-holonomic.config.yaml  ps4.config.yaml
seed_r7_bringup/launch/: moveit.launch  moveit_view.launch  seed_actuator.launch  seed_r7_bringup.launch
seed_r7_bringup/scripts/: make_udev_install.py  make_udev_install.sh  make_udev_install_seed4.sh
seed_r7_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
seed_r7_description/arm_typeCTy/: arm-upper.urdf.xacro  arm.urdf.xacro  controller_settings.yaml  noid-wheels.urdf.xacro
seed_r7_description/csv/: waist_p.csv  wrist_p.csv  wrist_r.csv
seed_r7_description/debian/: changelog  control  debhelper-build-stamp  files  rules
seed_r7_description/ha/: controller_settings.yaml  robot.urdf.xacro
seed_r7_description/obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
seed_r7_description/tests/: roslaunch_seed_arm_typec.xml  roslaunch_seed_r7_typef.xml
seed_r7_description/typeF/: noid.urdf  noid.urdf.xacro
seed_r7_gazebo/: CMakeLists.txt  package.xml
seed_r7_navigation/: CHANGELOG.rst  CMakeLists.txt  dummy_scan.py  package.xml  setup.py
seed_r7_robot_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
seed_r7_ros_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
seed_r7_ros_pkg/: CHANGELOG.rst  CMakeLists.txt  package.xml
seed_r7_samples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rviz.rviz
seed_r7_samples/test/: test.py  (+1 more)
seed_ros_controller/: CMakeLists.txt  package.xml
(+981 files in other folders)
