<?xml version="1.0"?>
<package format="2">
  <name>noid_bringup</name>
  <version>0.0.5</version>

  <description>The noid_bringup package</description>


  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
