<?xml version="1.0"?>
<package format="2">
  <name>noid_robot_interface</name>
  <version>0.0.0</version>
  <description>The noid_robot_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="seed-develop@thk.co.jp">Hironori Kondo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>noid_description</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>eband_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>noid_description</exec_depend>


  <export/>
</package>
