<package format="2">
  <name>noid_typeF_moveit_config</name>
  
  <version>0.0.5</version>

  <description>The noid_typeF_moveit_config package</description>


  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <author email="hi.kondo@thk.co.jp">hi.kondo</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>
  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>


  <license>BSD</license>


  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
