<?xml version="1.0"?>
<package format="2">
  <name>noid_typef_bringup</name>
  <version>0.0.2</version>

  <description>The noid_typef_bringup package</description>


  <maintainer email="develop@seed-solutions.net">seed_solutions</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
