<?xml version="1.0"?>
<package format="2">
  <name>noid_typef_description</name>
  <version>0.0.2</version>
  <description>The noid_typef_description package</description>

  <maintainer email="hi.kondo@thk.co.jp">hi-kondo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>EPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>
</package>
