<package format="2">
  <name>noid_typef_moveit_config</name>
  <version>0.0.2</version>
  <description>The noid_typef_moveit_config package</description>


  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <author email="develop@seed-solutions.net">seed_solutions</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>
  <maintainer email="develop@seed-solutions.net">seed_solutions</maintainer>


  <license>BSD</license>


   <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>noid_description</build_depend>
  <run_depend>noid_description</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>
