<package format="2">
  <name>noid_typef_moveit_config</name>
  
  <version>0.0.4</version>

  <description>The noid_typef_moveit_config package</description>


  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <author email="develop@seed-solutions.net">seed_solutions</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>
  <maintainer email="develop@seed-solutions.net">seed_solutions</maintainer>


  <license>BSD</license>


   <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <build_depend>noid_description</build_depend>
  <exec_depend>noid_description</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>
