<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_bringup</name>
  <version>0.3.0</version>

  <description>The seed_r7_bringup package</description>


  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
