<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_bringup</name>
  <version>0.3.4</version>

  <description>The seed_r7_bringup package</description>


  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>seed_r7_typef_moveit_config</depend>
  <depend>seed_r7_typeg_moveit_config</depend>
  <depend>controller_manager</depend>
  <depend>seed_r7_ros_controller</depend>
</package>
