<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_gazebo</name>
  <version>0.0.1</version>

  <description>The seed_r7_gazebo package</description>

  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>xacro</depend>

  <depend>seed_r7_navigation</depend>
  <depend>seed_r7_description</depend>
  <depend>seed_r7_moveit_config</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>

</package>
