<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_navigation</name>
  <version>0.0.5</version>

  <description>The seed_r7_navigation package</description>

  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>teleop_twist_joy</depend>
  <depend>joy</depend>
  <depend>urg_node</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>

</package>
