<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_robot_interface</name>
  <version>0.3.4</version>
  <description>The seed_r7_robot_interface package</description>

  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <author>Kazuhiro Sasabuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>seed_r7_ros_controller</depend>

  <export>
    <seed_r7_ros_controller plugin="${prefix}/typef/plugin_description.xml"/>
    <seed_r7_ros_controller plugin="${prefix}/typeg/plugin_description.xml"/>
    <seed_r7_ros_controller plugin="${prefix}/typeg_arm/plugin_description.xml"/>
    <seed_r7_ros_controller plugin="${prefix}/typeg2_arm/plugin_description.xml"/>
  </export>
</package>
