<?xml version="1.0"?>
<package format="2">
  <name>seed_r7_ros_pkg</name>
  <version>0.3.4</version>

  <description>The seed_r7_ros_pkg package</description>

  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>seed_r7_description</depend>
  <depend>seed_r7_typef_moveit_config</depend>
  <depend>seed_r7_typeg_moveit_config</depend>
  <depend>seed_r7_moveit_config</depend>
  <depend>seed_r7_robot_interface</depend>
  <depend>seed_r7_ros_controller</depend>
  <depend>seed_r7_bringup</depend>
  <depend>seed_r7_navigation</depend>
  <depend>seed_r7_samples</depend>
  <depend>seed_r7_gazebo</depend>
</package>
