<?xml version="1.0"?>
<package format="2">
  <name>seed_ros_controller</name>
  <version>0.0.0</version>
  <description>The controller package</description>

  <maintainer email="seed@dummy.com">seed</maintainer>

  <license>T.B.D.</license>

  <author>THK</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
    
  <export/>
</package>
